--- a/ui/narrative/methods/run_checkM_lineage_wf/display.yaml
+++ b/ui/narrative/methods/run_checkM_lineage_wf/display.yaml
@@ -8,7 +8,7 @@ tooltip: |
 
 screenshots: []
 
-icon: icon.png
+icon: checkm-green.png
 
 #
 # define a set of similar methods that might be useful to the user
@@ -31,9 +31,9 @@ suggestions:
 parameters :
     input_ref :
         ui-name : |
-            Assembly, Genome or BinnedContigs
+            Assembly or BinnedContigs
         short-hint : |
-            Assess the genome quality based on sequence in an Assembly, Genome, or in each bin of BinnedContig data.
+            Assess the genome quality based on sequence in an Assembly or in each bin of BinnedContig data.
 
 description : |
     <p>This app runs the CheckM lineage workflow (lineage_wf) on the provided data and produces a report.</p>
