--- a/kbase.yml
+++ b/kbase.yml
@@ -11,7 +11,7 @@ module-version:
     0.0.1
 
 owners:
-    [dylan, dparks, qzhang]
+    [dylan, dparks, qzhang, msneddon]
 
 data-version:
     1.0
