--- a/deploy.cfg
+++ b/deploy.cfg
@@ -9,3 +9,10 @@ njsw-url = {{ njsw_url }}
 auth-service-url = {{ auth_service_url }}
 auth-service-url-allow-insecure = {{ auth_service_url_allow_insecure }}
 scratch = /kb/module/work/tmp
+
+# threads sets the number of threads used to run checkm for commands
+# that accept them (lineage_wf and tetra for instance)
+threads = 2
+
+# reduced_tree runs lineage_wf with the reduced_tree option
+reduced_tree = 1
