--- a/kbase.yml
+++ b/kbase.yml
@@ -2,13 +2,13 @@ module-name:
     kb_Msuite
 
 module-description:
-    A KBase module
+    A KBase module for running CheckM
 
 service-language:
     python
 
 module-version:
-    1.0.0
+    1.1.0
 
 owners:
     [dylan, dparks, qzhang, msneddon]
